# espmeshmesh

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  library.json  protoc.sh
.cursor/skills/UPDATE_PACKAGE_VERSION/: SKILL.md
app/: CMakeLists.txt
app/src/: main.cpp
docs/: index.md  rfc_starpath.md
docs/cursor/: UPDATE_PACKAGE_VERSION.md
docs/media/: mm.excalidraw  starpath1.excalidraw  starpath2.excalidraw
src/: broadcast.cpp  broadcast.h  broadcast2.cpp  broadcast2.h  commands.h  connectedpath.cpp  connectedpath.h  crc16.cpp  crc16.h  defines.cpp  defines.h  discovery.cpp  discovery.h  dot11.h  encryption.c  encryption.cpp  encryption.h  espmeshmesh.cpp  espmeshmesh.h  espmeshmesh_impl.cpp  espmeshmesh_impl.h  log.cpp  log.h  memringbuffer.cpp  memringbuffer.h  meshaddress.cpp  meshaddress.h  meshsocket.cpp  meshsocket.h  modules.h  multipath.cpp  multipath.h  packetbuf.cpp  packetbuf.h  packetbufprotocol.cpp  packetbufprotocol.h  polite.cpp  polite.h  radiopacket.cpp  radiopacket.h  (+32 more)
src/proto/: commands.proto  disoverybeaconreply.options  disoverybeaconreply.proto  dummy.proto  nodepresentation.options  nodepresentation.proto  nodepresentationrx.proto  notificationbeacon.proto  pathrouting.options  pathrouting.proto
src/protoc/: commands.pb.c  commands.pb.h  disoverybeaconreply.pb.c  disoverybeaconreply.pb.h  nodepresentation.pb.c  nodepresentation.pb.h  nodepresentationrx.pb.c  nodepresentationrx.pb.h  notificationbeacon.pb.c  notificationbeacon.pb.h  pathrouting.pb.c  pathrouting.pb.h
